external/lib25519-20241004/build/arm64/unified/fe25519freezeS/1/shared/result-compile-fe25519_freeze
fe25519_freeze.S:52:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
